<resources>
    <string name="app_name">Calculadora</string>
    <string name="op_mult">*</string>
    <string name="op_div">/</string>
    <string name="op_soma">+</string>
    <string name="op_subt">-</string>
    <string name="op_porc">%</string>
    <string name="op_clear">C</string>
    <string name="op_sinal">+/-</string>
    <string name="virgula">,</string>
    <string name="igual">=</string>
    <string name="nove">9</string>
    <string name="oito">8</string>
    <string name="sete">7</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="quatro">4</string>
    <string name="tres">3</string>
    <string name="dois">2</string>
    <string name="um">1</string>
    <string name="zero">0</string>


</resources>
