<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.senai.sp.informatica.mobileb.calculadora.MainActivity"
    android:weightSum="1"
    android:background="@color/fundo">

    <EditText
	android:id="@+id/edResultado"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="20dp"
	android:ems="10"
	android:enabled="false"
	android:hint="0"
	android:textAlignment="textEnd"
    android:textSize="35dp"
    android:textColor="@color/colorPrimaryDark"
	tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:onClick="clear"
            android:text="@string/op_clear"
            android:backgroundTint="@color/colorAccent"
            android:textSize="15dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSinal"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/op_sinal"
            android:onClick="sinal"
            android:textSize="15dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnPorc"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/op_porc"
            android:onClick="porcento"
            android:textSize="15dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnSete"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/sete"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnOito"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/oito"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnNove"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/nove"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/op_div"
			android:onClick="divisao"
            android:textSize="15dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnQuatro"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/quatro"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCinco"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/cinco"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnSeis"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/seis"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/op_mult"
			android:onClick="multiplicacao"
            android:textSize="15dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnUm"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/um"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnDois"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/dois"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnTres"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/tres"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSubt"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/op_subt"
			android:onClick="subtracao"
            android:textSize="15dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:onClick="numeros"
            android:text="@string/zero"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnPonto"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/ponto"
            android:onClick="numeros"
            android:textSize="15dp"
            android:backgroundTint="@color/numeros"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnIgual"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/igual"
			android:onClick="igual"
            android:textSize="15dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSoma"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/op_soma"
			android:onClick="soma"
            android:textSize="15dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
